# Driver-Drowsiness-System

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: server.py  web_ui.py
app/core/: config.py  engine.py  logger.py  physics.py  pose.py  visualizer.py
tests/: conftest.py  test_engine.py  test_physics.py
