[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "driver-ai-guard"
version = "1.0.0"
description = "Real-time driver drowsiness detection using computer vision"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "opencv-python-headless==4.9.0.80",
    "dlib==19.24.2",
    "scipy==1.12.0",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.9",
    "streamlit==1.31.1",
    "streamlit-webrtc==0.57.1",
    "mlflow==2.11.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing -v"

[tool.coverage.report]
omit = ["tests/*", "*/migrations/*"]
fail_under = 70